[project]
name = "kvcompress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.12.0",
    "flash-attn>=2.8.3",
    "kvpress>=0.4.3",
    "torch>=2.10.0",
    "transformers==4.57.3",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
